Refatoração das Views